--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
 Continuous Rhythmic Phase-shifting Techniques</h1>
 <p class="author">Yoonjae Choi
  (Hanyang University)
- (<a href="https://orcid.org/https://orcid.org/0000-0000-0000-0000">ORCID</a>)
 </p>
 <p class="date">Submitted: 2023-07-13</p>
 <p class="date">Published: 2023-10-09</p>
@@ -98,7 +97,7 @@ and computers.</p>
 class="header-section-number">2</span> Discrete Rhythmic
 phase-shifting</h1>
 <figure>
-<img src="media/figure-discreted-phase-shifting.png"
+<img src="media/figure-discreted-phase-shifting.png" style="width:50.0%"
 alt="Discrete rhythmic phase-shifting by one beat (Tms)" />
 <figcaption aria-hidden="true">Discrete rhythmic phase-shifting by one
 beat (<span class="math inline"><em>T</em></span>ms)</figcaption>
